import("//build_overrides/efr32_sdk.gni")
import("//build_overrides/pigweed.gni")

import("${efr32_sdk_build_root}/efr32_sdk.gni")

import("${efr32_sdk_build_root}/silabs_executable.gni")
import("${chip_root}/src/platform/device.gni")

import("$dir_pw_protobuf_compiler/proto.gni")

efr32_project_dir = "${chip_root}/src/test_driver/efr32"
examples_plat_dir = "${chip_root}/examples/platform/silabs/efr32"
examples_common_plat_dir = "${chip_root}/examples/platform/silabs"

template("efr32_unit_test") {
  _unique_test_name = "${invoker.unique_suite_name}--${invoker.test_name}"

  # efr32_sdk("sdk") {
  #   unique_test_name = _unique_test_name
  #
  #   sources = [
  #     "${efr32_project_dir}/include/CHIPProjectConfig.h",
  #     "${examples_common_plat_dir}/FreeRTOSConfig.h",
  #   ]
  #
  #   include_dirs = [
  #     "${chip_root}/src/platform/silabs/efr32",
  #     "${efr32_project_dir}/include",
  #     "${examples_plat_dir}",
  #     "${examples_common_plat_dir}",
  #   ]
  #
  #   defines = [
  #     "PW_RPC_ENABLED",
  #
  #     # Thread is built but test driver do not have the NETWORK_COMMISSIONING cluster or zap config.
  #     "_NO_GENERIC_THREAD_NETWORK_COMMISSIONING_DRIVER_",
  #   ]
  # }

  silabs_executable(target_name) {
    output_name = "matter-silabs-device_tests--${_unique_test_name}.out"

    defines = [ "PW_RPC_ENABLED" ]
    sources = [
      "${chip_root}/examples/common/pigweed/RpcService.cpp",
      "${chip_root}/examples/common/pigweed/efr32/PigweedLoggerMutex.cpp",
      "${examples_common_plat_dir}/PigweedLogger.cpp",
      "${examples_common_plat_dir}/heap_4_silabs.c",
      "${examples_common_plat_dir}/syscalls_stubs.cpp",
      "${examples_plat_dir}/uart.cpp",
      "${invoker.test_source}",   #+++ Is this finding the right path?  something like src/access/tests ?
      "${efr32_project_dir}/src/main.cpp",  #+++ Had to add the ${efr32_project_dir}.  this used to be a relative path.  Is this change right?
    ]

    deps = [
      "${efr32_project_dir}:nl_test_service.nanopb_rpc",
      "${efr32_project_dir}:sdk",  #+++ Also tried ":sdk--${_unique_test_name}"
      "${dir_pw_unit_test}:rpc_service",
      "${chip_root}/config/efr32/lib/pw_rpc:pw_rpc",
      "${chip_root}/examples/common/pigweed:system_rpc_server",
      #"${chip_root}/src:tests",  #+++ Removed, since this is now a dependency in test_runner/efr32.
      "${chip_root}/src/lib",
      "${chip_root}/src/lib/support:pw_tests_wrapper",
      "${examples_common_plat_dir}/pw_sys_io:pw_sys_io_silabs",
    ]

    # OpenThread Settings
    if (chip_enable_openthread) {
      deps += [
        "${chip_root}/third_party/openthread:openthread",
        "${chip_root}/third_party/openthread:openthread-platform",
        "${examples_plat_dir}:efr-matter-shell",
      ]
    }

    # Attestation Credentials
    deps += [ "${examples_plat_dir}:efr32-attestation-credentials" ]

    # Factory Data Provider
    if (use_efr32_factory_data_provider) {
      deps += [ "${examples_plat_dir}:silabs-factory-data-provider" ]
    }

    deps += pw_build_LINK_DEPS

    include_dirs = [ "${chip_root}/examples/common/pigweed/efr32" ]

    ldscript = "${examples_common_plat_dir}/ldscripts/${silabs_family}.ld"

    inputs = [ ldscript ]

    ldflags = [
      "-T" + rebase_path(ldscript, root_build_dir),
      "-Wl,--no-warn-rwx-segment",
    ]

    output_dir = root_out_dir
  }
}
