# Copyright (c) 2024 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


import("//build_overrides/efr32_sdk.gni")  # Defines efr32_sdk_build_root
import("//build_overrides/pigweed.gni")  # Defines dir_pw_protobuf_compiler

import("${efr32_sdk_build_root}/efr32_sdk.gni")  # Defines sdk_support_root

import("${chip_root}/src/platform/device.gni")  # Defines chip_enable_openthread

import("$dir_pw_protobuf_compiler/proto.gni")  # Defines pw_build_LINK_DEPS

#FIXME: Where should these come from?
#They are also defined in src/test_driver_efr32/BUILD.gn
_examples_plat_dir = "${chip_root}/examples/platform/silabs/efr32"
_examples_common_plat_dir = "${chip_root}/examples/platform/silabs"

# Set the varialbes that silabs_exectuable will need.
platform_executable_type = "silabs_executable"
platform_executable_type_file = "${efr32_sdk_build_root}/silabs_executable.gni"
platform_executable_output_name = "matter-silabs-device_tests_"
platform_executable_output_name_suffix = ".out"
platform_executable_test_main = "//:efr32_test_main"